--- a/DescripcionPlato4.html
+++ b/DescripcionPlato4.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Descripción del Plato</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css"> <!-- Enlaza tu archivo de estilos CSS -->
+<style>
+    .bg-body {
+    background-image: url('fondo.png'); /* Utiliza la misma imagen de fondo que en el catálogo */
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh; /* Asegura que el fondo cubra toda la página */
+}
+
+</style>
+
+</head>
+
+<body>   
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="comilon.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                El Comilón
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#" style="color: black;">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="paginaNosotros.html" target="_blank" style="color: black;">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="paginaCatalogo.html" target="_blank" style="color: black;">Catálogo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="paginaContacto.html" target="_blank" style="color: black;">Contáctanos</a>
+                    </li>
+                </ul>
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link" href="paginaRegistro.html" target="_blank" style="color: black;">Registrarse</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="paginaInicioSesion.html" target="_blank" style="color: black;">Iniciar sesión</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="paginaCarrito.html" target="_blank" style="color: black;">
+                            Carrito <i class="bi bi-cart"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+<body>
+    <div class="container-fluid bg-body" style="padding-top: 50px;"> <!--fondo catalogo -->
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <!-- Coloca la imagen dentro de un contenedor para posicionarla -->
+                <div class="text-center">
+                    <img src="arrozPollito.jpg" alt="Fideos con Salsa Pesto" class="img-fluid">
+                </div>
+                <div class="card mt-5">
+                    <div class="card-body">
+                        <h2 class="card-title">GOHAN: ARROZ JAPONES TRADICIONAL</h2>
+                        <p class="card-text">
+                            Descripción:<br>
+                            Embárcate en un viaje culinario a la tierra del sol naciente con nuestro exquisito Gohan<br>
+                            
+                            Ingredientes:<br>
+                            
+                            -Arroz japonés de alta calidad<br>
+                            -Agua purificada<br>
+                            -Palta<br>
+                            -Pollo<br>
+                            -<strong>Stock: 32</strong><br>
+                            -<strong>PRECIO: $12.000</strong><br>
+                            <strong style="color: pink;">"EL COMILÓN"</strong><br>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
